[package]
name = "bloodwave-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include_dir = "0.7.3"
rand = "0.8.5"
rodio = { version = "0.17.1", default-features = false, features = ["symphonia-wav"] }

[build-dependencies]
winres = "0.1"